@@ -28,11 +28,14 @@
 
 #include "libavutil/common.h"
 #include "libavutil/cpu.h"
+#include "libavutil/hdr_dynamic_metadata.h"
 #include "libavutil/imgutils.h"
 
 #include "avcodec.h"
+#include "bytestream.h"
 #include "codec_internal.h"
 #include "decode.h"
+#include "itut35.h"
 #include "libaom.h"
 #include "profiles.h"
 
@@ -137,6 +140,61 @@ static int set_pix_fmt(AVCodecContext *avctx, struct aom_image *img)
     }
 }
 
+static int decode_metadata_itu_t_t35(AVFrame *frame,
+                                     const uint8_t *buffer, size_t buffer_size)
+{
+    if (buffer_size < 6)
+        return AVERROR(EINVAL);
+
+    GetByteContext bc;
+    bytestream2_init(&bc, buffer, buffer_size);
+
+    const int country_code = bytestream2_get_byteu(&bc);
+    const int provider_code = bytestream2_get_be16u(&bc);
+    const int provider_oriented_code = bytestream2_get_be16u(&bc);
+    const int application_identifier = bytestream2_get_byteu(&bc);
+
+    // See "HDR10+ AV1 Metadata Handling Specification" v1.0.1, Section 2.1.
+    if (country_code == ITU_T_T35_COUNTRY_CODE_US
+        && provider_code == ITU_T_T35_PROVIDER_CODE_SAMSUNG
+        && provider_oriented_code == 0x0001
+        && application_identifier == 0x04) {
+        // HDR10+
+        AVDynamicHDRPlus *hdr_plus = av_dynamic_hdr_plus_create_side_data(frame);
+        if (!hdr_plus)
+            return AVERROR(ENOMEM);
+
+        int res = av_dynamic_hdr_plus_from_t35(hdr_plus, bc.buffer,
+                                               bytestream2_get_bytes_left(&bc));
+        if (res < 0)
+            return res;
+    }
+
+    return 0;
+}
+
+static int decode_metadata(AVFrame *frame, const struct aom_image *img)
+{
+    const size_t num_metadata = aom_img_num_metadata(img);
+    for (size_t i = 0; i < num_metadata; ++i) {
+        const aom_metadata_t *metadata = aom_img_get_metadata(img, i);
+        if (!metadata)
+            continue;
+
+        switch (metadata->type) {
+        case OBU_METADATA_TYPE_ITUT_T35: {
+            int res = decode_metadata_itu_t_t35(frame, metadata->payload, metadata->sz);
+            if (res < 0)
+                return res;
+            break;
+        }
+        default:
+            break;
+        }
+    }
+    return 0;
+}
+
 static int aom_decode(AVCodecContext *avctx, AVFrame *picture,
                       int *got_frame, AVPacket *avpkt)
 {
@@ -214,6 +272,11 @@ static int aom_decode(AVCodecContext *avctx, AVFrame *picture,
 
             av_image_copy(picture->data, picture->linesize, planes,
                           stride, avctx->pix_fmt, img->d_w, img->d_h);
+        }
+        ret = decode_metadata(picture, img);
+        if (ret < 0) {
+            av_log(avctx, AV_LOG_ERROR, "Failed to decode metadata\n");
+            return ret;
         }
         *got_frame = 1;
     }
